ci: added matrix to pr workflow
temp comment out linting until we fix some issues

Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -25,6 +25,12 @@ jobs:
           node-version: '18'
           cache: npm
 
+      - name: Setup Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+
       - name: Install project modules
         run: npm ci
 
