--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,23 +6,35 @@ on:
     branches:
       - main
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   test:
     runs-on: ubuntu-latest
     name: Lint and test project
-    permissions:
-      checks: write
-      contents: write
-      pull-requests: write
+    strategy:
+      matrix:
+        node: ['18', 'latest']
+    env:
+      MAIN_NODE_VER: '18'
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
 
-      - name: Install node 18
+      - name: Install node ${{ matrix.node }}
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: ${{ matrix.node }}
           cache: npm
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+          cache: maven
 
       - name: Install project modules
         run: npm ci
@@ -30,17 +42,19 @@ jobs:
       - name: Lint source files
         run: npm run lint
 
-      - name: Run unit tests and create coverage report
-        run: npm run tests:rep
+      - name: Run unit tests
+        run: npm run test
+
+      - name: Compile project
+        run: npm run compile
 
       - name: Run integration tests
         working-directory: integration
         run: bash ./run_it.sh
 
-      - name: Report test results
-        if: always()
-        uses: dorny/test-reporter@v1.6.0
+      - name: Upload coverage reports
+        if: ${{ matrix.node == env.MAIN_NODE_VER }}
+        uses: actions/upload-artifact@v3
         with:
-          name: Unit Tests Run
-          path: unit-tests-result.json
-          reporter: mocha-json
+          name: coverage
+          path: ./coverage/coverage-final.json
