--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
 	},
 	"keywords": [
 		"analysis",
+		"codeready",
+		"crda",
+		"secure",
+		"supply-chain",
 		"vulnerability"
 	],
 	"engines": {
@@ -18,6 +22,7 @@
 		"npm": ">= 9.0.0"
 	},
 	"type": "module",
+	"bin": "dist/src/cmd.js",
 	"main": "dist/src/index.js",
 	"module": "dist/src/index.js",
 	"types": "dist/src/index.d.ts",
@@ -38,7 +43,8 @@
 		"postgen:backend": "find generated/backend -type f -exec sed -i \"/^import { HttpFile } from '..\\/http\\/http'/d\" {} +"
 	},
 	"dependencies": {
-		"fast-xml-parser": "^4.2.4"
+		"fast-xml-parser": "^4.2.4",
+		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
 		"@openapitools/openapi-generator-cli": "^2.6.0",
@@ -68,6 +74,7 @@
 			"src/**"
 		],
 		"exclude": [
+			"src/cmd.js",
 			"src/index.js"
 		],
 		"lines": 85,
