--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -18,24 +18,53 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
+        with:
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Install node 18
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18
           cache: npm
+          registry-url: 'https://npm.pkg.github.com'
 
-      - name: Setup Java 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 17
+      - name: Configure git
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+
+      - name: Update package with new version
+        id: bump
+        run: |
+          echo "version=$(npm version prerelease --no-git-tag-version --preid ea)" >> "$GITHUB_OUTPUT"
 
       - name: Install project modules
-        run: npm ci
+        run: npm ci --production
 
-      - name: Lint source files
-        run: npm run lint
+      - name: Publish package
+        run: npm publish
 
-      - name: Run unit tests and verify code coverage
-        run: npm test
+      - name: Commit and push package modifications
+        run: |
+          git add package.json
+          git add package-lock.json
+          git commit -m "build: updated package with ${{ steps.bump.outputs.version }} [skip ci]"
+          git push
+
+      - name: Create and push new tag
+        run: |
+          git tag ${{ steps.bump.outputs.version }} -m "${{ steps.bump.outputs.version }}"
+          git push origin ${{ steps.bump.outputs.version }}
+
+      - name: Create a release
+        uses: actions/github-script@v6.4.1
+        with:
+          github-token: ${{ secrets.STAGING_PAT }}
+          script: |
+            const repo_name = context.payload.repository.full_name
+            const response = await github.request('POST /repos/' + repo_name + '/releases', {
+              tag_name: '${{ steps.bump.outputs.version }}',
+              name: '${{ steps.bump.outputs.version }}',
+              prerelease: true,
+              generate_release_notes: true
+            })
