--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Install project modules
         run: npm ci --production
 
+      - name: Compile project
+        run: npm run compile
+
       - name: Publish package
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
