--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -39,7 +39,7 @@ jobs:
           echo "version=$(npm version prerelease --no-git-tag-version --preid ea)" >> "$GITHUB_OUTPUT"
 
       - name: Install project modules
-        run: npm ci --production
+        run: npm ci
 
       - name: Compile project
         run: npm run compile
