chore: refactor integration test structure and update contributing guidelines
Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

--- a/integration/testers/typescript/package.json
+++ b/integration/testers/typescript/package.json
@@ -7,10 +7,10 @@
 	"license": "Apache-2.0",
 	"scripts": {
 		"precompile": "rm -rf ./dist",
-		"compile": "tsc -p ./tsconfig.json"
+		"compile": "tsc -p tsconfig.json"
 	},
 	"dependencies": {
-		"@RHEcosystemAppEng/crda-javascript-api": "file:../../"
+		"@RHEcosystemAppEng/crda-javascript-api": "file:../../../"
 	},
 	"devDependencies": {
 		"typescript": "^5.1.3"
