--- a/integration/testers/javascript/package.json
+++ b/integration/testers/javascript/package.json
@@ -6,6 +6,6 @@
 	"type": "module",
 	"license": "Apache-2.0",
 	"dependencies": {
-		"@RHEcosystemAppEng/crda-javascript-api": "file:../../"
+		"@RHEcosystemAppEng/crda-javascript-api": "file:../../../"
 	}
 }
