ci: reveresd staging ci trigger, will only trigger for source-related files
Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -6,9 +6,12 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - ".github/**"
-      - "**.md"
+    paths:
+      - "generated/**"
+      - "src/**"
+      - "package-lock.json"
+      - "package.json"
+      - "tsconfig.json"
 
 jobs:
   stage:
