ci: prevent staging workflow from running on forks
Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -16,6 +16,7 @@ on:
 jobs:
   stage:
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'RHEcosystemAppEng'
     environment: staging
     name: Stage the project
     steps:
