refactor: rename to exhort
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/integration/testers/javascript/package.json
+++ b/integration/testers/javascript/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "js-it",
 	"version": "0.0.1",
-	"description": "crda-javascript-api javascript integration tests",
+	"description": "exhort-javascript-api javascript integration tests",
 	"private": true,
 	"type": "module",
 	"license": "Apache-2.0",
 	"dependencies": {
-		"@RHEcosystemAppEng/crda-javascript-api": "file:../../../"
+		"@RHEcosystemAppEng/exhort-javascript-api": "file:../../../"
 	}
 }
