--- a/integration/testers/typescript/package.json
+++ b/integration/testers/typescript/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ts-it",
 	"version": "0.0.1",
-	"description": "crda-javascript-api typescript integration tests",
+	"description": "exhort-javascript-api typescript integration tests",
 	"private": true,
 	"type": "module",
 	"license": "Apache-2.0",
@@ -10,7 +10,7 @@
 		"compile": "tsc -p tsconfig.json"
 	},
 	"dependencies": {
-		"@RHEcosystemAppEng/crda-javascript-api": "file:../../../"
+		"@RHEcosystemAppEng/exhort-javascript-api": "file:../../../"
 	},
 	"devDependencies": {
 		"typescript": "^5.1.3"
