--- a/test/providers/tst_manifests/pom_deps_with_ignore_on_group/pom.xml
+++ b/test/providers/tst_manifests/pom_deps_with_ignore_on_group/pom.xml
@@ -9,7 +9,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>log4j</groupId> <!--crdaignore-->
+      <groupId>log4j</groupId> <!--exhortignore-->
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
