--- a/test/providers/tst_manifests/pom_deps_with_ignore_on_wrong/pom.xml
+++ b/test/providers/tst_manifests/pom_deps_with_ignore_on_wrong/pom.xml
@@ -8,7 +8,7 @@
   <version>0.0.1</version>
 
   <dependencies>
-    <!--crdaignore-->
+    <!--exhortignore-->
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
