--- a/integration/testers/cli/package.json
+++ b/integration/testers/cli/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "cli-it",
 	"version": "0.0.1",
-	"description": "crda-javascript-api cli integration tests",
+	"description": "exhort-javascript-api cli integration tests",
 	"private": true,
 	"type": "module",
 	"license": "Apache-2.0",
 	"dependencies": {
-		"@RHEcosystemAppEng/crda-javascript-api": "file:../../../"
+		"@RHEcosystemAppEng/exhort-javascript-api": "file:../../../"
 	}
 }
