--- a/test/providers/tst_manifests/pom_deps_with_ignore_on_artifact/pom.xml
+++ b/test/providers/tst_manifests/pom_deps_with_ignore_on_artifact/pom.xml
@@ -10,7 +10,7 @@
   <dependencies>
     <dependency>
       <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId> <!--crdaignore-->
+      <artifactId>log4j</artifactId> <!--exhortignore-->
       <version>1.2.17</version>
     </dependency>
   </dependencies>
