--- a/test/providers/tst_manifests/pom_deps_with_ignore_on_dependency/pom.xml
+++ b/test/providers/tst_manifests/pom_deps_with_ignore_on_dependency/pom.xml
@@ -8,7 +8,7 @@
   <version>0.0.1</version>
 
   <dependencies>
-    <dependency> <!--crdaignore-->
+    <dependency> <!--exhortignore-->
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
