--- a/test/providers/tst_manifests/pom_deps_with_ignore_on_version/pom.xml
+++ b/test/providers/tst_manifests/pom_deps_with_ignore_on_version/pom.xml
@@ -11,7 +11,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.17</version> <!--crdaignore-->
+      <version>1.2.17</version> <!--exhortignore-->
     </dependency>
   </dependencies>
 
