add sbom and npm support with CycloneDX javascript library - the sbom data model structure is not consistent with the sbom data model of the CycloneDX Java SDK data model
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
 		"postgen:backend": "find generated/backend -type f -exec sed -i \"/^import { HttpFile } from '..\\/http\\/http'/d\" {} +"
 	},
 	"dependencies": {
+		"@cyclonedx/cyclonedx-library": "^4.0.0",
 		"fast-xml-parser": "^4.2.4",
+		"packageurl-js": "^1.0.2",
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
