test: enable local-test using npm script localtest and its pre+post hooks
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
 		"lint": "eslint src test --ext js",
 		"lint:fix": "eslint src test --ext js --fix",
 		"test": "c8 npm run tests",
+		"prelocaltest": "find test/ | grep sbom | xargs -i sed -i 's/2023-08-07T00:00:00.000Z/2023-08-06T21:00:00.000Z/g' {} ",
+		"localtest": "c8 npm run tests",
+        "postlocaltest": "git restore test/providers/tst_manifests/* --worktree",
 		"tests": "mocha",
 		"tests:rep": "mocha --reporter json > unit-tests-result.json",
 		"precompile": "rm -rf dist",
