chore: add docker image for exhort alpha
Signed-off-by: Ilona Shishov <Ilona.Shishov@gmail.com>

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -1,6 +1,15 @@
 ---
 name: Stage
 
+env:
+  # 🖊️ EDIT to change the image build settings.
+  IMAGE_NAME: exhort-javascript-api
+  IMAGE_REGISTRY: quay.io/ecosystem-appeng
+  IMAGE_REGISTRY_USER: ${{ secrets.IMAGE_REGISTRY_USER }}
+  IMAGE_REGISTRY_PASSWORD: ${{ secrets.IMAGE_REGISTRY_PASSWORD }}
+  DOCKERFILE_PATH: ./docker-image/Dockerfiles/Dockerfile.alpha
+  GITHUB_PACKAGE_REGISTRY_ACCESS_TOKEN: ${{ secrets.GITHUB_PACKAGE_REGISTRY_ACCESS_TOKEN }}
+
 on:
   workflow_dispatch:
   push:
@@ -77,3 +86,23 @@ jobs:
               prerelease: true,
               generate_release_notes: true
             })
+            
+      - name: Build Image With buildah
+        id: build-image
+        uses: redhat-actions/buildah-build@v2
+        with:
+          image: ${{ env.IMAGE_NAME }}
+          tags: ${{ steps.bump.outputs.version }}
+          dockerfiles: |
+            ${{ env.DOCKERFILE_PATH }}
+          build-args: |
+            GITHUB_PACKAGE_REGISTRY_ACCESS_TOKEN=${{ env.GITHUB_PACKAGE_REGISTRY_ACCESS_TOKEN }}
+          
+      - name: Push Image To Registry
+        uses: redhat-actions/push-to-registry@v2
+        with:
+          image: ${{ steps.build-image.outputs.image }}
+          tags: ${{ steps.build-image.outputs.tags }}
+          registry: ${{ env.IMAGE_REGISTRY }}
+          username: ${{ env.IMAGE_REGISTRY_USER }}
+          password: ${{ env.IMAGE_REGISTRY_PASSWORD }}
