--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@RHEcosystemAppEng/exhort-javascript-api",
-	"version": "v0.0.2-alpha.0",
+	"version": "0.0.2-alpha.1",
 	"description": "Code-Ready Dependency Analytics JavaScript API.",
 	"license": "Apache-2.0",
 	"homepage": "https://github.com/RHEcosystemAppEng/exhort-javascript-api#README.md",
