--- a/.github/workflows/release-alpha.yml
+++ b/.github/workflows/release-alpha.yml
@@ -21,7 +21,7 @@ on:
       - "package-lock.json"
       - "package.json"
       - "tsconfig.json"
-
+      - "config/config.properties"
 jobs:
   stage:
     runs-on: ubuntu-latest
@@ -73,6 +73,10 @@ jobs:
 
       - name: Compile project
         run: npm run compile
+
+      - name: Run integration tests
+        working-directory: integration
+        run: EXHORT_ITS_USE_REAL_API=true bash ./run_its.sh
 
       - name: Publish package
         env:
