feat: add python pip support to javascript-api https://issues.redhat.com/browse/APPENG-1790
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -36,6 +36,16 @@ jobs:
           java-version: 17
           cache: maven
 
+      - name: setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          cache: 'pip'
+      - name: get Python location
+        id: python-location
+        run: |
+          echo "python-bin-location=$(echo $pythonLocation)/bin" >> $GITHUB_OUTPUT
+
       - name: Install project modules
         run: npm ci
 
@@ -43,6 +53,9 @@ jobs:
         run: npm run lint
 
       - name: Run unit tests
+        env:
+          EXHORT_PYTHON3_PATH: "${{steps.python-location.outputs.python-bin-location}}/python3"
+          EXHORT_PIP3_PATH: "${{steps.python-location.outputs.python-bin-location}}/pip3"
         run: npm run test
 
       - name: Compile project
