--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
 		"lint": "eslint src test --ext js",
 		"lint:fix": "eslint src test --ext js --fix",
 		"test": "c8 npm run tests",
-		"prelocaltest": "find test/ | grep sbom | xargs -i sed -i 's/2023-08-07T00:00:00.000Z/2023-08-06T21:00:00.000Z/g' {} ",
+		"prelocaltest": "export EXHORT_PIP3_PATH=/home/zgrinber/python3.9/bin/pip3; export EXHORT_PYTHON3_PATH=/home/zgrinber/python3.9/bin/python3",
 		"localtest": "c8 npm run tests",
-		"postlocaltest": "git restore test/providers/tst_manifests/* --worktree",
 		"tests": "mocha",
 		"tests:rep": "mocha --reporter json > unit-tests-result.json",
 		"precompile": "rm -rf dist",
