test: python support need to install requirements.txt on environment before tests will run
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
 		"lint": "eslint src test --ext js",
 		"lint:fix": "eslint src test --ext js --fix",
 		"test": "c8 npm run tests",
-		"prelocaltest": "export EXHORT_PIP3_PATH=/home/zgrinber/python3.9/bin/pip3; export EXHORT_PYTHON3_PATH=/home/zgrinber/python3.9/bin/python3",
-		"localtest": "c8 npm run tests",
+		"localtest": "EXHORT_PIP3_PATH=/home/zgrinber/python3.9/bin/pip3 EXHORT_PYTHON3_PATH=/home/zgrinber/python3.9/bin/python3 c8 npm run tests",
 		"tests": "mocha",
 		"tests:rep": "mocha --reporter json > unit-tests-result.json",
 		"precompile": "rm -rf dist",
