--- a/docker-image/Dockerfiles/Dockerfile.alpha
+++ b/docker-image/Dockerfiles/Dockerfile.alpha
@@ -22,6 +22,9 @@ RUN curl -kL https://go.dev/dl/go1.21.1.linux-amd64.tar.gz -o /tmp/golang-packag
 # install jq JSON formating tool
 RUN curl -kL https://github.com/jqlang/jq/releases/download/jq-1.6/jq-linux64 -o /usr/bin/jq 
 
+# install linux utils Package to enable UUID generation
+RUN yum install util-linux
+
 # copy the .npmrc file
 COPY configs/.npmrc .
 # replace placeholder with the actual environment variable
@@ -37,19 +40,22 @@ RUN chmod +x /usr/jdk-20.0.2/bin/java \
     && chmod +x /usr/apache-maven-3.9.4/bin/mvn \
     && chmod +x /usr/go/bin/go \
     && chmod +x /usr/bin/jq \
+    && chmod +x /usr/bin/uuidgen \
     && chmod +x /opt/app-root/src/.npm-global/bin/exhort-javascript-api \
     && chmod +x /rhda.sh 
 
 # use default user
 USER default 
 
-#second stage
+# second stage
 FROM registry.access.redhat.com/ubi9/nodejs-18-minimal
 
 LABEL org.opencontainers.image.source https://github.com/RHEcosystemAppEng/exhort-javascript-api
 
 # assign token for exhort authentication with Snyk provider
 ENV EXHORT_SNYK_TOKEN=''
+# assign rhda token for rhda user authentication with exhort
+ENV RHDA_TOKEN=''
 
 # Copy java executable from the builder stage
 COPY --from=builder /usr/jdk-20.0.2/ /usr/jdk-20.0.2/
@@ -68,6 +74,9 @@ ENV PATH=$PATH:$JAVA_HOME/bin:$MAVEN_HOME/bin:$GOLANG_HOME/bin
 
 # Copy jq executable from the builder stage
 COPY --from=builder /usr/bin/jq /usr/bin/jq
+
+# Copy uuidgen executable from the builder stage
+COPY --from=builder /usr/bin/uuidgen /usr/bin/uuidgen
 
 # Copy exhort-javascript-api executable from the builder stage
 COPY --from=builder /opt/app-root/src/.npm-global/ /opt/app-root/src/.npm-global/
