feat: attach to request header rhda-source if set by client feat: attached to request header rhda-operation type chore: add a lot of useful debug logs
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": ["src/**/*", "generated/backend/**/*"],
+	"include": ["src/**/*", "generated/backend/**/*","./package.json"],
 	"exclude": ["node_modules", "dist"],
 	"compilerOptions": {
 		"allowJs": true,
@@ -17,6 +17,7 @@
 		"types": ["node"],
 		"module": "esnext",
 		"outDir": "dist",
-		"target": "esnext"
+		"target": "esnext",
+		"resolveJsonModule": true
 	}
 }
