--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@RHEcosystemAppEng/exhort-javascript-api",
-	"version": "0.0.2-ea.31",
+	"version": "0.0.2-ea.32",
 	"description": "Code-Ready Dependency Analytics JavaScript API.",
 	"license": "Apache-2.0",
 	"homepage": "https://github.com/RHEcosystemAppEng/exhort-javascript-api#README.md",
@@ -89,5 +89,7 @@
 			"text"
 		]
 	},
-	"eslintIgnore": ["index.js"]
+	"eslintIgnore": [
+		"index.js"
+	]
 }
