--- a/docker-image/Dockerfiles/Dockerfile.alpha
+++ b/docker-image/Dockerfiles/Dockerfile.alpha
@@ -19,6 +19,9 @@ RUN curl -kL https://dlcdn.apache.org/maven/maven-3/3.9.4/binaries/apache-maven-
 RUN curl -kL https://go.dev/dl/go1.21.1.linux-amd64.tar.gz -o /tmp/golang-package.tar.gz \
     && tar xvzf /tmp/golang-package.tar.gz -C /usr/
 
+# install python package manager (pip)
+RUN python3 -m ensurepip --upgrade
+
 # install jq JSON formating tool
 RUN curl -kL https://github.com/jqlang/jq/releases/download/jq-1.6/jq-linux64 -o /usr/bin/jq 
 
@@ -33,12 +36,13 @@ RUN sed -i "s/__PACKAGE_REGISTRY_ACCESS_TOKEN__/${PACKAGE_REGISTRY_ACCESS_TOKEN}
 RUN npm install --global @RHEcosystemAppEng/exhort-javascript-api
 
 # add RHDA script
-COPY scripts/rhda.sh /
+COPY scripts/rhda-alpha.sh /rhda.sh
 
 # assign executable permissions to all installed binaries
 RUN chmod +x /usr/jdk-20.0.2/bin/java \
     && chmod +x /usr/apache-maven-3.9.4/bin/mvn \
     && chmod +x /usr/go/bin/go \
+    && chmod +x /usr/local/bin/pip3 \
     && chmod +x /usr/bin/jq \
     && chmod +x /usr/bin/uuidgen \
     && chmod +x /opt/app-root/src/.npm-global/bin/exhort-javascript-api \
@@ -73,6 +77,14 @@ ENV GOLANG_HOME=/usr/go
 
 # Update PATH
 ENV PATH=$PATH:$JAVA_HOME/bin:$MAVEN_HOME/bin:$GOLANG_HOME/bin
+
+# Copy python executable from the builder stage
+COPY --from=builder /usr/bin/python3 /usr/bin/python3
+COPY --from=builder /usr/local/bin/pip3 /usr/local/bin/pip3
+COPY --from=builder /usr/lib64/python3.9 /usr/lib64/python3.9
+COPY --from=builder /usr/local/lib/python3.9 /usr/local/lib/python3.9
+COPY --from=builder /usr/lib64/libpython3.9.so.1.0 /usr/lib64/libpython3.9.so.1.0
+COPY --from=builder /usr/lib64/libexpat.so.1 /usr/lib64/libexpat.so.1
 
 # Copy jq executable from the builder stage
 COPY --from=builder /usr/bin/jq /usr/bin/jq
