--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
 		"lint:fix": "eslint src test --ext js --fix",
 		"test": "c8 npm run tests",
 		"localtest": "EXHORT_PIP3_PATH=/home/zgrinber/python3.9/bin/pip3 EXHORT_PYTHON3_PATH=/home/zgrinber/python3.9/bin/python3 c8 npm run tests",
-		"tests": "mocha",
+		"tests": "mocha --grep \"Integration Tests\" --invert",
 		"tests:rep": "mocha --reporter-option maxDiffSize=0 --reporter json > unit-tests-result.json",
+		"integration-tests": "mocha --grep \"Integration Tests\"",
 		"precompile": "rm -rf dist",
 		"compile": "tsc -p tsconfig.json",
 		"pregen:backend": "rm -rf generated",
