--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
 		"lint:fix": "eslint src test --ext js --fix",
 		"test": "c8 npm run tests",
 		"localtest": "EXHORT_PIP3_PATH=/home/zgrinber/python3.9/bin/pip3 EXHORT_PYTHON3_PATH=/home/zgrinber/python3.9/bin/python3 c8 npm run tests",
-		"tests": "mocha",
+		"tests": "mocha --grep \"Integration Tests|.*analysis module.*\" --invert",
 		"tests:rep": "mocha --reporter-option maxDiffSize=0 --reporter json > unit-tests-result.json",
+		"integration-tests": "mocha --grep \"Integration Tests\"",
 		"precompile": "rm -rf dist",
 		"compile": "tsc -p tsconfig.json",
 		"pregen:backend": "rm -rf generated",
@@ -58,7 +59,7 @@
 		"eslint": "^8.42.0",
 		"eslint-plugin-editorconfig": "^4.0.3",
 		"mocha": "^10.2.0",
-		"msw": "^1.2.2",
+		"msw": "^1.3.2",
 		"sinon": "^15.1.2",
 		"sinon-chai": "^3.7.0",
 		"typescript": "^5.1.3"
@@ -80,7 +81,8 @@
 		],
 		"exclude": [
 			"src/cli.js",
-			"src/index.js"
+			"src/index.js",
+			"src/analysis.js"
 		],
 		"lines": 85,
 		"reporter": [
