feat: integrate multi-source v4 endpoint of exhort backend
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 		"precompile": "rm -rf dist",
 		"compile": "tsc -p tsconfig.json",
 		"pregen:backend": "rm -rf generated",
-		"gen:backend": "openapi-generator-cli generate -i https://raw.githubusercontent.com/RHEcosystemAppEng/exhort/0.1.x/src/main/resources/META-INF/openapi.yaml -g typescript --global-property models --model-package backend -o generated",
+		"gen:backend": "openapi-generator-cli generate -i https://raw.githubusercontent.com/RHEcosystemAppEng/exhort/main/api-spec/v4/openapi.yaml -g typescript --global-property models --model-package backend -o generated",
 		"postgen:backend": "find generated/backend -type f -exec sed -i \"/^import { HttpFile } from '..\\/http\\/http'/d\" {} +"
 	},
 	"dependencies": {
