--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,22 +14,19 @@ on:
       - closed
     branches:
       - 'main'
-
     paths:
       - "generated/**"
       - "src/**"
       - "package-lock.json"
       - "package.json"
       - "tsconfig.json"
-      - ".github/workflows/stage.yml"
 
 jobs:
-  stage:
+  release:
     runs-on: ubuntu-latest
-#    Branches that starts with `release/` shouldn't trigger this workflow, as these are triggering the release workflow.
-    if: github.repository_owner == 'RHEcosystemAppEng' && !startsWith(github.head_ref, 'release/')
     environment: staging
-    name: Stage the project
+    if: github.repository_owner == 'RHEcosystemAppEng' && startsWith(github.head_ref, 'release/')
+    name: Release the project
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
@@ -48,10 +45,31 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
 
+      - name: get previous released annotated tag
+        id: last-release
+        run: |
+          echo "base-tag=$(git describe | awk -F '-' '{print $1}')" >> "$GITHUB_OUTPUT"
+          echo "full-tag=$(git describe)" >> "$GITHUB_OUTPUT"
+
+
+      - name: get first tag in current development iteration according to base
+        id: fetch-tag
+        if: ${{ contains(steps.last-release.outputs.full-tag , 'ea')
+        run: |
+          echo "oldest-tag=$(git for-each-ref --sort=creatordate --format '%(refname:lstrip=2)' refs/tags | grep ${{ steps.last-release.outputs.base-tag }} )" >> "$GITHUB_OUTPUT"
+
+      - name: determine semver component to bump
+        env:
+          BUMP_PART: ${{ contains(github.event.pull_request.title,'major') && 'major' || 'check-minor' }}
+        id: bump-decision
+        run: |
+          echo "bump-part=$(${{ env.BUMP_PART == 'check-minor' && '${{ contains(github.event.pull_request.title,'minor') && 'minor' || 'patch' }}' || 'major' }})" >> "$GITHUB_OUTPUT"
+
+
       - name: Update package with new version
         id: bump
         run: |
-          echo "version=$(npm version prerelease --no-git-tag-version --preid ea)" >> "$GITHUB_OUTPUT"
+          echo "version=$(npm version ${{ steps.bump-decision.outputs.bump-part }} --no-git-tag-version )" >> "$GITHUB_OUTPUT"
 
       - name: Install project modules
         run: npm ci
@@ -76,6 +94,21 @@ jobs:
           git tag ${{ steps.bump.outputs.version }} -m "${{ steps.bump.outputs.version }}"
           git push origin ${{ steps.bump.outputs.version }}
 
+      - name: Create release notes for ${{ steps.bump.outputs.version }} release
+        uses: actions/github-script@v6
+        id: release-notes
+        with:
+          github-token: ${{ secrets.STAGING_PAT }}
+          script: |
+            const repo_name = context.payload.repository.full_name
+            const response = await github.request('POST /repos/' + repo_name + '/releases' + '/generate-notes', {
+              tag_name: '${{ steps.bump.outputs.version }}',
+              previous_tag_name: '${{ steps.fetch-tag.outputs.oldest-tag != ''  && steps.fetch-tag.outputs.oldest-tag  || steps.last-release.outputs.base-tag }}'
+            })
+            return response.data.body
+
+
+
       - name: Create a release
         uses: actions/github-script@v6.4.1
         with:
@@ -85,8 +118,10 @@ jobs:
             const response = await github.request('POST /repos/' + repo_name + '/releases', {
               tag_name: '${{ steps.bump.outputs.version }}',
               name: '${{ steps.bump.outputs.version }}',
-              prerelease: true,
-              generate_release_notes: true
+              draft: false,
+              body: ${{ steps.release-notes.outputs.result }},
+              prerelease: false,
+              make_latest: 'true'
             })
 
       - name: Build Image With buildah
