--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,9 +11,10 @@ on:
   workflow_dispatch:
   pull_request:
     types:
-      - closed
+      - opened
+      - labeled
     branches:
-      - 'main'
+      - 'release-test'
     paths:
       - "generated/**"
       - "src/**"
@@ -25,7 +26,6 @@ jobs:
   release:
     runs-on: ubuntu-latest
     environment: staging
-    if: github.repository_owner == 'RHEcosystemAppEng' && startsWith(github.head_ref, 'release/')
     name: Release the project
     steps:
       - name: Checkout sources
@@ -42,7 +42,7 @@ jobs:
 
       - name: Configure git
         run: |
-          git config user.name "${{ github.actor }}"
+          git config user.name "${{ github.actor }}"git
           git config user.email "${{ github.actor }}@users.noreply.github.com"
 
       - name: get previous released annotated tag
@@ -63,7 +63,7 @@ jobs:
           BUMP_PART: ${{ contains(github.event.pull_request.title,'major') && 'major' || 'check-minor' }}
         id: bump-decision
         run: |
-          echo "bump-part=$(${{ env.BUMP_PART == 'check-minor' && '${{ contains(github.event.pull_request.title,'minor') && 'minor' || 'patch' }}' || 'major' }})" >> "$GITHUB_OUTPUT"
+          echo "bump-part=$(${{ env.BUMP_PART == 'check-minor' && ${{ contains(github.event.pull_request.title,'minor') && 'minor' || 'patch' }} || 'major' }})" >> "$GITHUB_OUTPUT"
 
 
       - name: Update package with new version
