--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ on:
       - "package-lock.json"
       - "package.json"
       - "tsconfig.json"
+      - ".github/workflows/release.yml"
 
 jobs:
   release:
@@ -54,7 +55,7 @@ jobs:
 
       - name: get first tag in current development iteration according to base
         id: fetch-tag
-        if: ${{ contains(steps.last-release.outputs.full-tag , 'ea')
+        if: ${{ contains(steps.last-release.outputs.full-tag , '-ea.')
         run: |
           echo "oldest-tag=$(git for-each-ref --sort=creatordate --format '%(refname:lstrip=2)' refs/tags | grep ${{ steps.last-release.outputs.base-tag }} )" >> "$GITHUB_OUTPUT"
 
