--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,11 @@ jobs:
           BUMP_PART: ${{ contains(github.event.pull_request.title,'major') && 'major' || 'check-minor' }}
         id: bump-decision
         run: |
-          echo "bump-part=$(${{ env.BUMP_PART == 'check-minor' && ${{ contains(github.event.pull_request.title,'minor') && 'minor' || 'patch' }} || 'major' }})" >> "$GITHUB_OUTPUT"
+          if env.BUMP_PART == 'check-minor'; then
+             echo "bump-part=${{ contains(github.event.pull_request.title,'minor') && 'minor' || 'patch' }}" >> "$GITHUB_OUTPUT"
+          else
+             echo "bump-part=major" >> "$GITHUB_OUTPUT"
+          fi
 
 
       - name: Update package with new version
