--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 		"precompile": "rm -rf dist",
 		"compile": "tsc -p tsconfig.json",
 		"pregen:backend": "rm -rf generated",
-		"gen:backend": "openapi-generator-cli generate -i https://raw.githubusercontent.com/RHEcosystemAppEng/exhort-api-spec/main/api/v4/openapi.yaml -g typescript --global-property models --model-package backend -o generated",
+		"gen:backend": "openapi-generator-cli generate -i https://raw.githubusercontent.com/RHEcosystemAppEng/exhort-api-spec/v1.0.3/api/v4/openapi.yaml -g typescript --global-property models --model-package backend -o generated",
 		"postgen:backend": "cp test/it/tsconfig.json generated/backend/tsconfig.json ; find generated/backend -type f -exec sed -i \"/^import { HttpFile } from '..\\/http\\/http'/d\" {} + ; npm run compileintegration ",
 		"compileintegration": "bash -c \"cd generated/backend ; tsc -p tsconfig.json ; cd ../..\""
 	},
