--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Publish package
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_MAVEN_TOKEN }}
         run: npm publish
 
       - name: Commit and push package modifications
