ci: remove Dockerfile.alpha
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -5,7 +5,7 @@ env:
   # 🖊️ EDIT to change the image build settings.
   IMAGE_NAME: exhort-javascript-api
   IMAGE_REGISTRY: quay.io/ecosystem-appeng
-  DOCKERFILE_PATH: ./docker-image/Dockerfiles/Dockerfile.alpha
+  DOCKERFILE_PATH: ./docker-image/Dockerfiles/Dockerfile
 
 on:
   workflow_dispatch:
