test: add integration test for cli ci: add step for integration test cli
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -64,6 +64,10 @@ jobs:
       - name: Run integration tests
         run: npm run integration-tests
 
+      - name: Run integration tests cli
+        working-directory: integration
+        run: bash ./run_its.sh
+
       - name: Upload coverage reports
         if: ${{ matrix.node == env.MAIN_NODE_VER }}
         uses: actions/upload-artifact@v3
