--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@babel/core": "^7.23.2",
 		"@cyclonedx/cyclonedx-library": "^4.0.0",
 		"fast-xml-parser": "^4.2.4",
+		"help": "^3.0.2",
 		"packageurl-js": "^1.0.2",
 		"yargs": "^17.7.2"
 	},
