--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"test": "c8 npm run tests",
 		"localtest": "EXHORT_PIP3_PATH=/home/zgrinber/python3.9/bin/pip3 EXHORT_PYTHON3_PATH=/home/zgrinber/python3.9/bin/python3 c8 npm run tests",
 		"postlocaltest": " git status | grep src/providers/ | grep rewire | xargs -i git clean -f {}",
-		"tests": "mocha --grep \"Integration Tests|.*analysis module.*\" --invert",
+		"tests": "mocha --loader=esmock  --grep \"Integration Tests|.*analysis module.*\" --invert",
 		"tests:rep": "mocha --reporter-option maxDiffSize=0 --reporter json > unit-tests-result.json",
 		"integration-tests": "mocha --grep \"Integration Tests\"",
 		"precompile": "rm -rf dist",
@@ -64,6 +64,7 @@
 		"chai": "^4.3.7",
 		"eslint": "^8.42.0",
 		"eslint-plugin-editorconfig": "^4.0.3",
+		"esmock": "^2.6.2",
 		"mocha": "^10.2.0",
 		"msw": "^1.3.2",
 		"sinon": "^15.1.2",
