ci: add go-setup with specific go version to pass go tests
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -46,6 +46,11 @@ jobs:
         run: |
           echo "python-bin-location=$(echo $pythonLocation)/bin" >> $GITHUB_OUTPUT
 
+      - name: setup go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.20.1'
+
       - name: Install project modules
         run: npm ci
 
