ci: prevent staging wf from running twice
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -31,7 +31,7 @@ jobs:
   stage:
     runs-on: ubuntu-latest
 #    Branches that starts with `release/` shouldn't trigger this workflow, as these are triggering the release workflow.
-    if: (github.repository_owner == 'RHEcosystemAppEng' && !startsWith(github.head_ref, 'release/')) || (github.repository_owner == 'RHEcosystemAppEng' && github.ref_name == 'main' && contains(github.event.commits[0].message, 'special staging'))
+    if: (github.repository_owner == 'RHEcosystemAppEng' &&  github.event_name == 'pull_request' &&  !startsWith(github.head_ref, 'release/')) || (github.repository_owner == 'RHEcosystemAppEng' && github.ref_name == 'main' && github.event_name == 'push' && contains(github.event.commits[0].message, 'special staging'))
     environment: staging
     name: Stage the project
     steps:
