ci: trigger staging pipeline also in case of docker image change
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -21,6 +21,7 @@ on:
       - "package.json"
       - "tsconfig.json"
       - ".github/workflows/stage.yml"
+      - "docker-image/**"
 
   push:
     branches:
