ci: trigger stage only for main branch in PR
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -12,6 +12,8 @@ on:
   pull_request:
     types:
       - closed
+    branches:
+      - main
 
     paths:
       - "generated/**"
@@ -22,16 +24,11 @@ on:
       - ".github/workflows/stage.yml"
       - "docker-image/**"
 
-  push:
-    branches:
-      - 'main'
-
-
 jobs:
   stage:
     runs-on: ubuntu-latest
 #    Branches that starts with `release/` shouldn't trigger this workflow, as these are triggering the release workflow.
-    if: (github.repository_owner == 'RHEcosystemAppEng' &&  github.event_name == 'pull_request' &&  !startsWith(github.head_ref, 'release/')) || (github.repository_owner == 'RHEcosystemAppEng' && github.ref_name == 'main' && github.event_name == 'push' && contains(github.event.commits[0].message, 'special staging'))
+    if: github.repository_owner == 'RHEcosystemAppEng' &&  github.event_name == 'pull_request' &&  !startsWith(github.head_ref, 'release/')
     environment: staging
     name: Stage the project
     steps:
@@ -64,9 +61,9 @@ jobs:
         run: npm run compile
 
       - name: Create .npmrc
+        if: !contains(github.event.pull_request.head.repo.full_name , 'RHEcosystemAppEng')
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_MAVEN_TOKEN }}
-        if: !contains(github.event.pull_request.head.repo.full_name , 'RHEcosystemAppEng')
         run: |
             echo "//npm.pkg.github.com/:_authToken=$NODE_AUTH_TOKEN" > ~/.npmrc
             echo "@RHEcosystemAppEng:registry=https://npm.pkg.github.com" > ~/.npmrc
