--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -62,7 +62,7 @@ jobs:
         run: npm run compile
 
       - name: Create .npmrc
-        if: !contains(github.event.pull_request.head.repo.full_name , 'RHEcosystemAppEng')
+        if: ${{ !contains(github.event.pull_request.head.repo.full_name , 'RHEcosystemAppEng') }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_MAVEN_TOKEN }}
         run: |
