ci: need to execute workflows only if PR merged
Signed-off-by: Zvi Grinberg <zgrinber@redhat.com>

--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -8,7 +8,6 @@ env:
   DOCKERFILE_PATH: ./docker-image/Dockerfiles/Dockerfile
 
 on:
-  workflow_dispatch:
   pull_request_target:
     types:
       - closed
@@ -29,7 +28,7 @@ jobs:
   stage:
     runs-on: ubuntu-latest
 #    Branches that starts with `release/` shouldn't trigger this workflow, as these are triggering the release workflow.
-    if: github.repository_owner == 'RHEcosystemAppEng' &&  github.event_name == 'pull_request_target' &&  !startsWith(github.head_ref, 'release/')
+    if: github.repository_owner == 'RHEcosystemAppEng' && github.event.pull_request.merged == true &&  !startsWith(github.head_ref, 'release/')
     environment: staging
     name: Stage the project
     steps:
