--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     environment: staging
-    if: github.repository_owner == 'RHEcosystemAppEng' && startsWith(github.head_ref, 'release/')
+    if: github.repository_owner == 'RHEcosystemAppEng' && github.event.pull_request.merged == true && startsWith(github.head_ref, 'release/' )
     name: Release the project
     steps:
       - name: Checkout sources
